# vkrg

./: Cargo.toml  README.md
examples/1_triangle/src/: main.rs
examples/2_spinning_triangle/: Cargo.toml
examples/2_spinning_triangle/src/: main.rs  vertex.wgsl
examples/3_textures/: Cargo.toml
examples/3_textures/src/: main.rs
examples/helpers/: Cargo.toml
examples/helpers/src/: cmd.rs  lib.rs  load.rs  misc.rs  pipeline.rs  swapchain.rs
examples/triangle/: Cargo.toml
examples/triangle/src/: main.rs
src/: arena.rs  lib.rs  resource.rs
src/device/: descriptor.rs  init.rs  mod.rs
src/graph/: cache.rs  compile.rs  frame_data.rs  mod.rs  resource.rs  test.rs  virtual_resource.rs
